--- a/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionArchivosMultimedia/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/gestionCurso/gestionArchivosMultimedia/index.xhtml
@@ -134,6 +134,9 @@
                     </div>
                 </h:form>
             </p:tab>
+            <p:tab title="Ver Archivo Multimedia">
+
+            </p:tab>
         </p:tabView>
     </ui:define>
 </ui:composition>
