--- a/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/reporteMatricula/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/formato/rpt/reporteMatricula/index.xhtml
@@ -37,33 +37,33 @@
                         <p:column headerText="Año" >
                             #{formatoPantallas.anio2}
                         </p:column>
+                        <p:column headerText="carnet" >
+                            #{formatoPantallas.carnet}
+                        </p:column>
                         <p:column headerText="Alumno" >
                             #{formatoPantallas.campo100}
                         </p:column>
-                        <p:column headerText="Estado" >
-                            #{formatoPantallas.campo30}
+                        <p:column headerText="grado" >
+                            #{formatoPantallas.campo15}
                         </p:column>
-
-                        <!--                        <p:column headerText="Acciones">
-                                                                                <i class="icon-users Fs25 Red" style="cursor: pointer" title="Gestionar Docentes"></i>
-                                                                                <i class="icon-graduate32 Fs25 Red" style="cursor: pointer" title="Gestionar Alumnos"></i>
-                                                  
-                                                </p:column>-->
+                        <p:column headerText="seccion" >
+                            #{formatoPantallas.campo15}
+                        </p:column>
                         <f:facet name="footer">
                             Total de alumnos 999
                         </f:facet>
                     </p:dataTable>
                     <div class="EmptyBox20"></div>
                     <div class="TexAlCenter">
-                        
+
                         <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
-                        <p:outputLabel value="Exportar a:"></p:outputLabel>
+                            <p:outputLabel value="Exportar a:"></p:outputLabel>
                             <p:selectOneRadio  id="console" value="#{radioView.console}">
-                            <f:selectItem itemLabel="Excel" itemValue="Excel" />
-                            <f:selectItem itemLabel="PDF" itemValue="PDF" />
-                        </p:selectOneRadio>
-                        <p:commandButton  value="Generar"></p:commandButton>
-                        <p:commandButton value="Regresar"></p:commandButton>
+                                <f:selectItem itemLabel="Excel" itemValue="Excel" />
+                                <f:selectItem itemLabel="PDF" itemValue="PDF" />
+                            </p:selectOneRadio>
+                            <p:commandButton  value="Generar"></p:commandButton>
+                            <p:commandButton value="Regresar"></p:commandButton>
                         </h:panelGrid>
                     </div>
 
